--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -33,7 +33,7 @@ p {
     color: #333; }
 
 #showcase {
-  min-height: 450px;
+  min-height: 100vh;
   color: #fff;
   text-align: center; }
   #showcase .bg-image {
@@ -43,14 +43,17 @@ p {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 450px;
+    height: 100%;
     z-index: -1;
     opacity: 0.7; }
   #showcase .content-wrap {
     padding: 0 1.5em; }
   #showcase h1 {
-    padding-top: 100px;
-    padding-bottom: 0; }
+    padding-top: 300px;
+    padding-bottom: 0;
+    font-size: 60px; }
+  #showcase p {
+    font-size: 35px; }
 
 #section-a {
   background: #eaeaea;
@@ -69,8 +72,6 @@ p {
       margin-bottom: 1em;
       background: #fff;
       color: #333; }
-      #section-b ul li .card-content {
-        padding: 1.5em; }
 
 #section-c {
   background: #fff;
@@ -108,7 +109,7 @@ p {
 
   .grid {
     display: grid;
-    grid-template-columns: 1fr repeat(2, minmax(auto, 30em)) 1fr; }
+    grid-template-columns: 1fr repeat(2, minmax(auto, 35em)) 1fr; }
     .grid ul {
       grid-column: 2/4;
       display: flex;
