--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -52,7 +52,7 @@ p {
 
  #showcase{
 
-        min-height: 450px;
+        min-height: 100vh;
         color:#fff;
         text-align: center;
 
@@ -63,7 +63,7 @@ p {
               background-repeat: no-repeat;
               background-size: cover;
               width: 100%;
-              height: 450px;
+              height: 100%;
               z-index: -1;
               opacity: 0.7;
 
@@ -75,8 +75,12 @@ p {
           }
 
           h1 {  
-              padding-top: 100px;
+              padding-top: 300px;
               padding-bottom: 0;
+              font-size: 60px;
+          }
+          p{
+              font-size: 35px;
           }
 
 
@@ -93,6 +97,7 @@ p {
 
        .content-wrap {
            padding: 0 1.5em;
+            
        }
          
 }
@@ -111,9 +116,14 @@ p {
                 margin-bottom: 1em;
                 background: #fff;
                 color:#333;
+                //   img{
+                //       max-height:20em;
+                //size the images in the cards ==== use only landscape images.
+
+                //   }
 
                   .card-content {
-                      padding: 1.5em;
+                    //   padding: 0.5em;
                   }
             } 
       }
@@ -192,7 +202,7 @@ p {
 
 .grid{
      display: grid;
-     grid-template-columns: 1fr repeat(2, minmax(auto, 30em)) 1fr;
+     grid-template-columns: 1fr repeat(2, minmax(auto, 35em)) 1fr;
 
        
           
