--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -112,20 +112,7 @@ p {
           list-style: none;
           margin: 0;
           padding: 0;
-            li{
-                margin-bottom: 1em;
-                background: #fff;
-                color:#333;
-                //   img{
-                //       max-height:20em;
-                //size the images in the cards ==== use only landscape images.
-
-                //   }
-
-                  .card-content {
-                    //   padding: 0.5em;
-                  }
-            } 
+          
       }
 }
 
@@ -166,7 +153,7 @@ p {
 
       a{
 
-        color: blue;
+        color: #fff;
         text-decoration: none;
 
       }
